bitfields/tests/compile_error_cases/errors/arrays/array_zero_length.rs
use bitfields::bitfield;

#[bitfield([u8; 0])]
pub struct Bitfield {
    a: u8,
}

fn main() {}

