bitfields/tests/compile_error_cases/errors/arrays/array_zero_length.stderr
error: The bitfield array length must be greater than 0.
 --> tests/compile_error_cases/errors/arrays/array_zero_length.rs:3:1
  |
3 | #[bitfield([u8; 0])]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
